--- a/custom.css
+++ b/custom.css
@@ -33,6 +33,36 @@ body {
 
 }
 
+/* Thumbnails Styles */
+.thumbnails {
+  margin-right: -15px;
+}
+
+.thumbnails a {
+  float: left;
+  width: 25%;
+  padding-right: 15px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+
+.thumbnails img {
+  display: block;
+  transition: all .2 ease-in-out;
+}
+
+.thumbnails:hover img {
+  opacity: .6;
+  transform: scale(.92);
+}
+
+.thumbnails img:hover {
+  opacity: 1;
+  transform: scale(1);
+  box-shadow: 0  0 7px rgba(0, 0, 0, .5);
+
+}
+
 .box-a {background-color: rgb(192, 127, 127); padding: 10px; border: 3px solid black;}
 
 .my-custom-container {
